--- a/productpage.html
+++ b/productpage.html
@@ -30,8 +30,8 @@
                     <li>100 % forseglet søm</li>
                     <li>Hoftelengde</li>
                     <li>Lommer med glidelås</li>
-                    <li>Resirkulert materiale</li>q
-            </ul>
+                    <li>Resirkulert materiale</li>
+                </ul>
         </div>
       </section>
     </main>
