--- a/products.html
+++ b/products.html
@@ -39,6 +39,24 @@
                 <p class="price">1899,-</p>
                 <a href="productpage.html" aria-label="shop our products">Shop now</a>
             </div>
+            <div class="card">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
+            <div class="card">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
+            <div class="card">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
         </div>
     </main>
     <footer>
