--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="styles.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
@@ -16,14 +17,36 @@
                 <li><a href="contactus.html">Contact us</a></li>
                 <li><a href="shoppingcart.html">Cart</a></li>
             </ul>
-        </nav>
+        </nav> 
     </header>
     <main>
-        <img>
-        <a href="products.html">Discover your adventure</a>
+        <h1>Rainydays</h1>
+        <div class="heroimage"></div>
+        <a href="products.html" id="discoveradventure">Discover your adventure</a>
+        <section>
+        <div class="cards">
+            <div class="card">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
+            <div class="card">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
+            <div class="card">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
+        </section> 
     </main>
-    <footer>
-
-    </footer>
+        <footer>
+            <p> subscribe to our email</p>
+        </footer>
 </body>
 </html>
