--- a/index.html
+++ b/index.html
@@ -3,25 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rainydays</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
-        <nav>
+            <label for="hamburger-menu" id="menu">
+                <i class="fa fa-shopping-cart"></i>
+                <i href="shoppingcart.html"class="fa fa-bars"></i> Menu
+            </label>
+        <input type="checkbox" id="hamburger-menu">
+        <nav class="hamburger">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="aboutus.html">About us</a></li>
-                <li><a href="contactus.html">Contact us</a></li>
-                <li><a href="shoppingcart.html">Cart</a></li>
+            <li><a href="index.html">Products</a></li>
+            <li><a href="aboutus.html">About us</a></li>
+            <li><a href="contactus.html">Contact</a></li>
+            <li><a href="shoppingcart.html">Shopping cart</a></li>
+            <li><a href="index.html">Sign in</a></li>
+            <li><a href="index.html">My orders</a></li>
             </ul>
-        </nav> 
-    </header>
+        </nav>
+   </header>
     <main>
         <h1>Rainydays</h1>
-        <div class="heroimage"></div>
+        <div class="heroimage">heroimage</div>
         <a href="products.html" id="discoveradventure">Discover your adventure</a>
         <section>
         <div class="cards">
@@ -46,7 +52,7 @@
         </section> 
     </main>
         <footer>
-            <p> subscribe to our email</p>
+            <p>May we help you</p>
         </footer>
 </body>
 </html>
