--- a/productpage.html
+++ b/productpage.html
@@ -8,16 +8,22 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="aboutus.html">About us</a></li>
-                <li><a href="contactus.html">Contact us</a></li>
-                <li><a href="shoppingcart.html">Cart</a></li>
-            </ul>
-        </nav>
-    </header>
+        <label for="hamburger-menu" id="menu">
+            <i class="fa fa-shopping-cart"></i>
+            <i class="fa fa-bars"></i> Menu
+        </label>
+    <input type="checkbox" id="hamburger-menu">
+    <nav class="hamburger">
+        <ul>
+        <li><a href="index.html">Products</a></li>
+        <li><a href="about.html">About us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html">Shopping cart</a></li>
+        <li><a href="index.html">Sign in</a></li>
+        <li><a href="index.html">My orders</a></li>
+        </ul>
+    </nav>
+</header>
     <main>
         <h1>ett eller annet h1</h1>
       <section>
