--- a/products.html
+++ b/products.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="styles.css" rel="stylesheet"/>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Rainydays</title>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet"/>
+    </head>
 <body>
     <header>
-        <nav>
+        <header>
+            <label for="hamburger-menu" id="menu">
+                <i class="fa fa-shopping-cart"></i>
+                <i class="fa fa-bars"></i> Menu
+            </label>
+        <input type="checkbox" id="hamburger-menu">
+        <nav class="hamburger">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="aboutus.html">About us</a></li>
-                <li><a href="contactus.html">Contact us</a></li>
-                <li><a href="shoppingcart.html">Cart</a></li>
+            <li><a href="index.html">Products</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">Shopping cart</a></li>
+            <li><a href="index.html">Sign in</a></li>
+            <li><a href="index.html">My orders</a></li>
             </ul>
         </nav>
+   </header>
     </header>
     <main>
         <h1>Our Products</h1>
