--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="checkbox" id="hamburger-menu">
         <nav class="hamburger">
             <ul>
-            <li><a href="index.html">Products</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="contactus.html">Contact</a></li>
             <li><a href="shoppingcart.html">Shopping cart</a></li>
