--- a/products.html
+++ b/products.html
@@ -30,6 +30,52 @@
     <main>
         <h1>Our Products</h1>
         <div class="cards">
+            <div class="card1">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
+            <div class="card2">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
+            <div class="card3">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
+            <div class="card4">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
+            <div class="card5">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
+            <div class="card6">
+                <img src="produktbildet" alt="product image">
+                <h2>Mens Better Sweater</h2>
+                <p class="price">1899,-</p>
+                <a href="productpage.html" aria-label="shop our products">Shop now</a>
+            </div>
+        </div>
+    </main>
+    <footer>
+    </footer>
+</body>
+</html>
+
+<!--<main>
+        <h1>Our Products</h1>
+        <div class="cards">
             <div class="card">
                 <img src="produktbildet" alt="product image">
                 <h2>Mens Better Sweater</h2>
@@ -67,8 +113,4 @@
                 <a href="productpage.html" aria-label="shop our products">Shop now</a>
             </div>
         </div>
-    </main>
-    <footer>
-    </footer>
-</body>
-</html>
+    </main>-->
