--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainydays</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="stylestest.css" rel="stylesheet"/>
 </head>
 <body>
     <header>
@@ -26,11 +26,29 @@
         </nav>
    </header>
     <main>
-        <img>
+        <div class="container">
+            <div class="one">one</div>
+            <div>two</div>
+            <div>three</div>
+            <div>four</div>
+            <div>five</div>
+            <div>six</div>
+        </div>
         <a href="products.html">Discover your adventure</a>
     </main>
     <footer>
-
     </footer>
 </body>
+<body class="grid-container">
+    <header>
+        Header
+    </header>
+    <div id="logo">Logo</div>
+    <nav class="hamburger">
+        Menu
+    </nav>
+    <main>Main</main>
+    <aside>Right</aside>
+    <footer>Footer</footer>
+  </body>
 </html>
