--- a/products.html
+++ b/products.html
@@ -1,116 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Rainydays</title>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-        <link href="styles.css" rel="stylesheet"/>
-    </head>
-<body>
-    <header>
-        <header>
-            <label for="hamburger-menu" id="menu">
-                <i class="fa fa-shopping-cart"></i>
-                <i class="fa fa-bars"></i> Menu
-            </label>
-        <input type="checkbox" id="hamburger-menu">
-        <nav class="hamburger">
-            <ul>
-            <li><a href="index.html">Products</a></li>
-            <li><a href="about.html">About us</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="index.html">Shopping cart</a></li>
-            <li><a href="index.html">Sign in</a></li>
-            <li><a href="index.html">My orders</a></li>
-            </ul>
-        </nav>
-   </header>
-    </header>
-    <main>
-        <h1>Our Products</h1>
-        <div class="cards">
-            <div class="card1">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
-            <div class="card2">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
-            <div class="card3">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
-            <div class="card4">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
-            <div class="card5">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
-            <div class="card6">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
-        </div>
-    </main>
-    <footer>
-    </footer>
-</body>
-</html>
+<head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rainydays</title>
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
+      <link href="css/styles.css" rel="stylesheet"/>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+</head>
+<body class="site-grid">
 
-<!--<main>
-        <h1>Our Products</h1>
-        <div class="cards">
-            <div class="card">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
-            <div class="card">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
-            <div class="card">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
-            <div class="card">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
-            <div class="card">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
-            <div class="card">
-                <img src="produktbildet" alt="product image">
-                <h2>Mens Better Sweater</h2>
-                <p class="price">1899,-</p>
-                <a href="productpage.html" aria-label="shop our products">Shop now</a>
-            </div>
+
+
+  <header>
+    <a href="index.html"><img src="assets/rainylogo.png"></a>
+    <div class="dropdown">
+        <i class="fa fa-shopping-cart" ref="shoppingcart.html" id="carticon"></i>
+        <p>menu</p>
+        <i class="fa fa-bars" id="menuicon"></i>
+        <div class="dropdown-content">
+            <a href="products.html">Products</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="cart.html">Cart</a>
+            <a href="index.html">index</a>
         </div>
-    </main>-->
+    </div>
+</header>
+<main class="main"> 
+</main>
+    <footer class="footer">
+      <div class="stickyfooter">
+        <p> Copyright&copy; </p>
+        <ul>
+          <li><a href="cards.html">Contact</a></li>
+        <li><a href="contact us.html">FAQ</a></li>
+        <li><a href="about.html">Aboutus</a></li>
+        <li><a href="about.html">Aboutus</a></li>
+        <li><a href="about.html">Aboutus</a></li>
+      </ul>
+      </div>
+    </footer>
+  </body>
+</html>
