--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="index.html"><img src="assets/rainylogo.png"></a>
     <div class="dropdown">
         <i class="fa fa-shopping-cart" ref="shoppingcart.html" id="carticon"></i>
-        <p>menu</p>
+        <p>Menu</p>
         <i class="fa fa-bars" id="menuicon"></i>
         <div class="dropdown-content">
             <a href="index.html">Products</a>
@@ -39,45 +39,51 @@
       <div class="discovertext">
         <a href="cards.html" class="discoverourproduts">Discover your adventure</a>
       </div>
-      <div class="cards">
-          <div class="card">
+      <div class="cardsindex">
+          <div class="cardindex">
               <img src="/assets/jakke7.jpg" alt="product image">
               <h2>Mens Better Sweater</h2>
               <p class="price">1899,-</p>
               <a href="productpage.html" aria-label="product page">Shop now</a>
           </div>
-          <div class="card">
+          <div class="cardindex">
               <img src="/assets/jakke7.jpg" alt="product image">
               <h2>Mens Better Sweater</h2>
               <p class="price">1899,-</p>
               <a href="productpage.html" aria-label="product page">Shop now</a>
           </div>
-          <div class="card">
+          <div class="cardindex">
             <img src="/assets/jakke7.jpg" alt="product image">
             <h2>Mens Better Sweater</h2>
             <p class="price">1899,-</p>
             <a href="productpage.html" aria-label="product page">Shop now</a>
           </div>
       </div>
-      <div class="bigimgcontainerindex">
-        <div class="bigimg1index">
-          <img src="/assets/bigimgwhite.jpg" alt="product image" />
-          <a href="productpage.html" aria-label="product page"
+
+
+      <section class="bottomindexsection">
+        <div class="bigimgcontainerindex">
+          <div class="bigimg1index">
+            <img src="/assets/bigimgwhite.jpg" alt="product image" />
+            <a href="productpage.html" aria-label="product page"
             >Explore womens collection</a
-          >
-        </div>
-        <div class="bigimg2index">
-          <img src="/assets/bigimageblack.jpg" alt="product image" />
-          <a href="productpage.html" aria-label="product page"
+            >
+          </div>
+          <div class="bigimg2index">
+            <img src="/assets/bigimageblack.jpg" alt="product image" />
+            <a href="productpage.html" aria-label="product page"
             >Explore mens collection</a
-          >
+            >
+          </div>
         </div>
-      </div>
         <div class="bigimgbottom">
           <a href="productpage.html" aria-label="product page" class="imgbutton-bottom"
-            >Explore our collection</a
+          >Explore our collection</a
           >
         </div>
+      </section>
+        
+
     </main>
     <footer class="footer">
       <div class="stickyfooter">
