--- a/about.html
+++ b/about.html
@@ -25,51 +25,7 @@
             <a href="index.html">index</a>
         </div>
     </div>
-</header>.fullcontent {
-  & h1 {
-    padding: 1rem;
-  }
-  & #logobottomabout {
-    display: block;
-    max-width: 150px;
-    margin-inline: auto;
-    padding: 4rem 0;
-  }
-  & h2, p {
-    margin-block: 1rem;
-  }
-}
-.wrapper {
-  background-color: var(--grey);
-  margin-inline: auto;
-  max-height: 30rem;
-  /*display: flow-root;/*content cannot escape parent element*/
-  & img {
-    width: 100%;
-    object-fit: contain;
-    max-height: 30rem;
-    margin-inline: auto;
-  }
-  
-}
-.abouttextbox, h1{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  color: black;
-  gap: 1rem;
-  max-width: 45rem;
-  margin-inline: auto;
-  @media (min-width: 900px) {
-    .abouttextbox {
-      display: grid;
-      grid-template-columns: 1fr;
-    }
-    p {
-      padding: 0;
-    }
-    
-  }
-}
+</header>
 <main>
   <section class="fullcontent">
       <div class="wrapper">
