--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <a href="index.html"><img src="assets/rainylogo.png"></a>
     <div class="dropdown">
         <i class="fa fa-shopping-cart" ref="shoppingcart.html" id="carticon"></i>
-        <p>Menu</p>
+        <p>menu</p>
         <i class="fa fa-bars" id="menuicon"></i>
         <div class="dropdown-content">
-            <a href="index.html">Products</a>
-            <a href="index.html">About</a>
-            <a href="index.html">Contact</a>
-            <a href="index.html">Cart</a>
-            <a href="index.html">Cart</a>
+            <a href="products.html">Products</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="cart.html">Cart</a>
+            <a href="index.html">index</a>
         </div>
     </div>
 </header>
