--- a/products.html
+++ b/products.html
@@ -5,15 +5,12 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainydays</title>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-      <link href="css/styles.css" rel="stylesheet"/>
+      <link href="styles.css" rel="stylesheet"/>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body class="site-grid">
-
-
-
   <header>
     <a href="index.html"><img src="assets/rainylogo.png"></a>
     <div class="dropdown">
@@ -30,6 +27,50 @@
     </div>
 </header>
 <main class="main"> 
+  <div class="containerproducts">
+    <div class="cardsproducts">
+        <div class="card">
+            <img src="/assets/jakke7.jpg" alt="product image">
+            <h2>Mens Better Sweater</h2>
+            <p class="price">1899,-</p>
+            <a href="productpage.html" aria-label="product page">Shop now</a>
+        </div>
+        <div class="card">
+            <img src="/assets/jakke7.jpg" alt="product image">
+            <h2>Mens Better Sweater</h2>
+            <p class="price">1899,-</p>
+            <a href="productpage.html" aria-label="product page">Shop now</a>
+        </div>
+        <div class="card">
+            <img src="/assets/jakke7.jpg" alt="product image">
+            <h2>Mens Better Sweater</h2>
+            <p class="price">1899,-</p>
+            <a href="productpage.html" aria-label="product page">Shop now</a>
+        </div>
+        <div class="card">
+            <img src="/assets/jakke7.jpg" alt="product image">
+            <h2>Mens Better Sweater</h2>
+            <p class="price">1899,-</p>
+            <a href="productpage.html" aria-label="product page">Shop now</a>
+        </div>
+        <div class="card">
+            <img src="/assets/jakke7.jpg" alt="product image">
+            <h2>Mens Better Sweater</h2>
+            <p class="price">1899,-</p>
+            <a href="productpage.html" aria-label="product page">Shop now</a>
+        </div>
+        <div class="card">
+            <img src="/assets/jakke7.jpg" alt="product image">
+            <h2>Mens Better Sweater</h2>
+            <p class="price">1899,-</p>
+            <a href="productpage.html" aria-label="product page">Shop now</a>
+        </div>
+</div>
+
+
+
+
+  
 </main>
     <footer class="footer">
       <div class="stickyfooter">
