--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body class="site-grid">
-
-
-
   <header>
     <a href="index.html"><img src="assets/rainylogo.png"></a>
     <div class="dropdown">
@@ -40,27 +37,25 @@
         <a href="cards.html" class="discoverourproduts">Discover your adventure</a>
       </div>
       <div class="cardsindex">
-          <div class="cardindex">
+          <div class="card">
               <img src="/assets/jakke7.jpg" alt="product image">
               <h2>Mens Better Sweater</h2>
               <p class="price">1899,-</p>
               <a href="productpage.html" aria-label="product page">Shop now</a>
           </div>
-          <div class="cardindex">
+          <div class="card">
               <img src="/assets/jakke7.jpg" alt="product image">
               <h2>Mens Better Sweater</h2>
               <p class="price">1899,-</p>
               <a href="productpage.html" aria-label="product page">Shop now</a>
           </div>
-          <div class="cardindex">
+          <div class="card">
             <img src="/assets/jakke7.jpg" alt="product image">
             <h2>Mens Better Sweater</h2>
             <p class="price">1899,-</p>
             <a href="productpage.html" aria-label="product page">Shop now</a>
           </div>
       </div>
-
-
       <section class="bottomindexsection">
         <div class="bigimgcontainerindex">
           <div class="bigimg1index">
