--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainydays</title>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-      <link href="css/styles.css" rel="stylesheet"/>
+      <link href="styles.css" rel="stylesheet"/>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -27,6 +27,44 @@
     </div>
 </header>
 <main class="main"> 
+  <section class="fullcontentcontact">
+    <div class="wrappercontact">
+        <img src="assets/contactusimage.jpg" id="aboutimage" alt="decorative image">
+    </div>
+    <h1>Contact us</h1>
+    </div>
+    <section class="formsectioncontact">
+        <div class="contactustextsection">
+            <h2>Contact us</h2>
+            <p>If you have any questions, please contact us, Monday to Thursday 10:00 - 18:00 
+                at donotreply@rainydays.no. Please include relevant order information. Include
+                as much as possible. All our contact info is included in the pannel to the right.</p>
+                <img src="assets/RainyDays_Logo.png">
+        </div>
+        <div class="form">
+            <h2>Submit request</h2>
+            <br>
+                <form action="nolocationyeat" method="get">
+                <ul>
+                    <li>
+                        <input type="text" id="firstname" name="firstname" >
+                        <label for="firstname">First name</label>
+                    </li>
+                    <li>
+                        <input type="text" id="lastname" name="lastname" >
+                        <label for="firstname">Last name</label>
+                    </li>
+                    <li>
+                        <input type="email" id="email" name="email" >
+                        <label for="email">E-mail</label>
+                    </li>
+                </ul>
+                <br>
+                <input type="submit" value="Submit" id="submitbutton">
+                </form>
+        </div>
+    </section>
+</section>
 </main>
     <footer class="footer">
       <div class="stickyfooter">
