--- a/productpage.html
+++ b/productpage.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainydays</title>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-      <link href="css/styles.css" rel="stylesheet"/>
+      <link href="styles.css" rel="stylesheet"/>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -30,6 +30,36 @@
     </div>
 </header>
 <main class="main"> 
+  <div class="containerforproductpage">
+    <div class="productpicture">
+      <img src="/assets/prodoctimage1.jpg">
+    </div>
+    <div class="productinfo">
+      <h2>Mens better sweater</h2>
+      <h3>Kr. 1899,-</h3>
+      <div class="productinfolineseperator">_____________________________</div>
+      <ul>
+        <li>YKK®-zipper</li>
+        <li>Windproof and breathebale</li>
+        <li>2-layer construction</li>
+        <li>100 % sealed seam</li>
+        <li>Comfterbale interior</li>
+        <li>Thighlenght</li>
+        <li>Pockets with zippers</li>
+        <li>Recycled material</li>
+      </ul>
+      <div class="sizebuttonscontainer">
+        <button>S</button>
+        <button>M</button>
+        <button>L</button>
+        <button>XL</button>
+        <button>XXL</button>
+      </div>
+      <div class="addtocartcontainer">
+        <button>Add to cart</button>
+      </div>
+    </div>
+  </div>
 </main>
     <footer class="footer">
       <div class="stickyfooter">
