tweaks and changes
tweaks and changes

--- a/cartsucsess.html
+++ b/cartsucsess.html
@@ -59,9 +59,9 @@
               <p>Kr. 475.00</p>
               <p>Kr. 2248.00</p>
             </div>
-            <a href="cart.html">add to cart</a>  
+            <imput>checbox</imput>
           </div>
-
+          
         </div>
         <div class="checkoutinputarea">
           <form action="stillnolocal" method="get">
