--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,10 @@
                         <input type="email" id="email" name="email" >
                         <label for="email">E-mail</label>
                     </li>
+                    <li>
+                      <textarea id="textarea"></textarea>
+                        <label for="textarea">your submission</label>
+                    </li>
                 </ul>
                 <br>
                 <input type="submit" value="Submit" id="submitbutton">
