--- a/productpage.html
+++ b/productpage.html
@@ -56,7 +56,7 @@
         <button>XXL</button>
       </div>
       <div class="addtocartcontainer">
-        <button>Add to cart</button>
+        <a href="cart.html">add to cart</a>        
       </div>
     </div>
   </div>
