--- a/products.html
+++ b/products.html
@@ -27,6 +27,7 @@
     </div>
 </header>
 <main class="main"> 
+  <h1 class="hidoh1">Our products</h1>
   <div class="containerproducts">
     <div class="cardsproducts">
         <div class="card">
