--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
 </header>
     <main class="main">
+      <h1 class="hidoh1">Rainydays frontpage</h1>
       <section class="herocontainer">
         <div class="herosection">
             <img src="/assets/heroimg.jpg" alt="product image">
