--- a/productpage.html
+++ b/productpage.html
@@ -3,7 +3,7 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rainydays</title>
+    <title>Product page</title>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
       <link href="styles.css" rel="stylesheet"/>
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,17 +58,32 @@
     </div>
   </div>
 </main>
-    <footer class="footer">
-      <div class="stickyfooter">
-        <p> Copyright&copy; </p>
-        <ul>
-          <li><a href="cards.html">Contact</a></li>
-        <li><a href="contact us.html">FAQ</a></li>
-        <li><a href="about.html">Aboutus</a></li>
-        <li><a href="about.html">Aboutus</a></li>
-        <li><a href="about.html">Aboutus</a></li>
+<footer class="footer">
+  <div class="footercollums">
+<!--         <p>Copyright&copy;</p> -->
+    <div class="footer1">
+      <p class="footertitle1">May we help you</p>
+      <ul>
+        <li><a href="contact.html"></a>Contact</li>
+        <li><a href="about.html"></a>FAQ</li>
+        <li><a href="about.html"></a>About us</li>
       </ul>
-      </div>
-    </footer>
+    </div>
+    <div class="footer2">
+      <p class="footertitle2">Your profile</p>
+      <ul>
+        <li><a href="signin.html"></a>Contact</li>
+        <li><a href="cart.html"></a>Orders</li>
+        <li><a href="privacy.html"></a>Privacy and cookie policy</li>
+      </ul>
+    </div>
+    <div class="footer3">
+      <p class="footertitle3">Sign up for email updates</p>
+      <p>E-mail</p>
+      <input type="text" />
+      <a href="emailunsubscribe">E-mail unsubscribe</a>
+    </div>
+  </div>
+</footer>
   </body>
 </html>
