--- a/about.html
+++ b/about.html
@@ -1,56 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rainydays</title>
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-      <link href="styles.css" rel="stylesheet"/>
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-</head>
-<body class="site-grid">
-  <header>
-    <a href="index.html"><img src="assets/rainylogo.png"></a>
-    <div class="dropdown">
-        <i class="fa fa-shopping-cart" ref="shoppingcart.html" id="carticon"></i>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About us page</title>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link href="styles.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="site-grid">
+    <header>
+      <a href="index.html"><img src="assets/rainylogo.png" /></a>
+      <div class="dropdown">
+        <i
+          class="fa fa-shopping-cart"
+          ref="shoppingcart.html"
+          id="carticon"
+        ></i>
         <p>menu</p>
         <i class="fa fa-bars" id="menuicon"></i>
         <div class="dropdown-content">
-            <a href="products.html">Products</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="cart.html">Cart</a>
-            <a href="index.html">index</a>
+          <a href="products.html">Products</a>
+          <a href="about.html">About</a>
+          <a href="contact.html">Contact</a>
+          <a href="cart.html">Cart</a>
+          <a href="index.html">index</a>
         </div>
-    </div>
-</header>
-<main>
-  <section class="fullcontent">
-      <div class="wrapper">
-          <img src="assets/aboutusimg.jpg" id="aboutimage" alt="decorative image">
       </div>
-      <h1>About us</h1>
-      <div class="abouttextbox">
-          <p id="abouttext1">Founded in Bergen, Norway, our products are tried and extesevly tested for life in the Norwegian west coast. Rainydays forges ahead for innovation while celebrating modern design. The jackets are mid-range in price and emphasize durability and being suitable for a range of different weather types ensuring customers are comfortable whatever adventure they go on.
+    </header>
+    <main>
+      <section class="fullcontentabout">
+        <div class="wrapperabout">
+          <img
+            src="assets/aboutusimg.jpg"
+            id="aboutimage"
+            alt="decorative image"
+          />
+        </div>
+        <h1>About us</h1>
+        <div class="abouttextbox">
+          <p id="abouttext1">
+            Founded in Bergen, Norway, our products are tried and extesevly
+            tested for life in the Norwegian west coast. Rainydays forges ahead
+            for innovation while celebrating modern design. The jackets are
+            mid-range in price and emphasize durability and being suitable for a
+            range of different weather types ensuring customers are comfortable
+            whatever adventure they go on.
           </p>
-          <p id="abouttext2">Join us in making a difference with sustainable outdoor gear. The EcoTrail™ Recycled Hiking Jacket is not just a jacket; it's a statement of your commitment to a greener, more responsible world. Whether you're conquering mountain peaks or strolling through local parks, do it in style, comfort, and with the environment in mind. Choose the EcoTrail™ Recycled Hiking Jacket today and embark on your adventures while leaving a positive impact on the planet. Upgrade your outdoor experience and be part of the movement toward a more sustainable future.
-          </p>    
-      </div>
-      <img src="assets/rainylogo.png" alt="logophoto" id="logobottomabout">    
-  </section>
-</main>
+          <p id="abouttext2">
+            Join us in making a difference with sustainable outdoor gear. The
+            EcoTrail™ Recycled Hiking Jacket is not just a jacket; it's a
+            statement of your commitment to a greener, more responsible world.
+            Whether you're conquering mountain peaks or strolling through local
+            parks, do it in style, comfort, and with the environment in mind.
+            Choose the EcoTrail™ Recycled Hiking Jacket today and embark on your
+            adventures while leaving a positive impact on the planet. Upgrade
+            your outdoor experience and be part of the movement toward a more
+            sustainable future.
+          </p>
+        </div>
+        <img src="assets/rainylogo.png" alt="logophoto" id="logobottomabout" />
+      </section>
+    </main>
     <footer class="footer">
-      <div class="stickyfooter">
-        <p> Copyright&copy; </p>
-        <ul>
-          <li><a href="cards.html">Contact</a></li>
-        <li><a href="contact us.html">FAQ</a></li>
-        <li><a href="about.html">Aboutus</a></li>
-        <li><a href="about.html">Aboutus</a></li>
-        <li><a href="about.html">Aboutus</a></li>
-      </ul>
+      <div class="footercollums">
+        <!--         <p>Copyright&copy;</p> -->
+        <div class="footer1">
+          <p class="footertitle1">May we help you</p>
+          <ul>
+            <li><a href="contact.html"></a>Contact</li>
+            <li><a href="about.html"></a>FAQ</li>
+            <li><a href="about.html"></a>About us</li>
+          </ul>
+        </div>
+        <div class="footer2">
+          <p class="footertitle2">Your profile</p>
+          <ul>
+            <li><a href="signin.html"></a>Contact</li>
+            <li><a href="cart.html"></a>Orders</li>
+            <li><a href="privacy.html"></a>Privacy and cookie policy</li>
+          </ul>
+        </div>
+        <div class="footer3">
+          <p class="footertitle3">Sign up for email updates</p>
+          <p>E-mail</p>
+          <input type="text" />
+          <a href="emailunsubscribe">E-mail unsubscribe</a>
+        </div>
       </div>
     </footer>
   </body>
