--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,10 @@
 </header>
 <main class="main"> 
   <section class="fullcontentcontact">
+    <h1 class="hidoh1">Contact us</h1>
     <div class="wrappercontact">
         <img src="assets/contactusimage.jpg" id="aboutimage" alt="decorative image">
     </div>
-    <h1>Contact us</h1>
     </div>
     <section class="formsectioncontact">
         <div class="contactustextsection">
@@ -65,8 +65,8 @@
                 <input type="submit" value="Submit" id="submitbutton">
                 </form>
         </div>
+        <img src="assets/RainyDays_Logo.png" id="contactusimagebottom">
     </section>
-   <img src="assets/RainyDays_Logo.png">
   </section>
 </main>
 <footer class="footer">
