--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <h1 class="hidoh1">Rainydays frontpage</h1>
       <section class="herocontainer">
         <div class="herosection">
-          <img src="/assets/heroimg.jpg" alt="product image" />
-          <a href="productpage.html" aria-label="product page"
+          <!-- <img src="/assets/heroimg.jpg" alt="product image" /> -->
+          <a href="productpage.html" aria-label="heroimage" class="imgbutton-hero"
             >Explore our collection</a
           >
         </div>
@@ -87,10 +87,7 @@
           </div>
         </div>
         <div class="bigimgbottomindex">
-          <a
-            href="productpage.html"
-            aria-label="product page"
-            class="imgbutton-bottom"
+          <a href="productpage.html" aria-label="product page" class="imgbutton-bottom"
             >Explore our collection</a
           >
         </div>
