cart and product page
added bare minimum of styling to make page presentebale

--- a/cart.html
+++ b/cart.html
@@ -41,10 +41,13 @@
       <div class="checkoutgrid">
         <div class="checkoutinformationarea">
           <i class="fa fa-shopping-bag" id="shoppingbag">1 items</i>
+          <p>______________________________</p>
           <div class="titlepicturepricecontainer">
-            <img src="assets/jakke7.jpg">
-            <a>Mens better jacket</a>
-            <p>1899,-</p>
+            <img src="assets/jakke7.jpg" alt="productjacket">
+            <div class="textinfoareainsideinformationgrid">
+              <a>Mens better jacket</a>
+              <p>1899,-</p>
+            </div>
           </div>
           <p>______________________________</p>
           <div class="checkoutpricegrid">
@@ -52,17 +55,15 @@
               <p>Subtotal</p>
               <p>Shipping</p>
               <p>Vat(included)</p>
-              <p>Total</p>
+              <p><b>Total</b></p>
             </div>
             <div class="numbers">
               <p>Kr. 1999.00</p>
               <p>Kr. 249.00</p>
               <p>Kr. 475.00</p>
-              <p>Kr. 2248.00</p>
+              <p><b>Kr. 2248.00</b></p>
             </div>
-            <a href="cartsucsess.html">add to cart</a>  
           </div>
-
         </div>
         <div class="checkoutinputarea">
           <form action="stillnolocal" method="get">
