--- a/productpage.html
+++ b/productpage.html
@@ -34,17 +34,28 @@
     <div class="productinfo">
       <h2>Mens better sweater</h2>
       <h3>Kr. 1899,-</h3>
-      <div class="productinfolineseperator">_____________________________</div>
-      <ul>
-        <li>YKK®-zipper</li>
-        <li>Windproof and breathebale</li>
-        <li>2-layer construction</li>
-        <li>100 % sealed seam</li>
-        <li>Comfterbale interior</li>
-        <li>Thighlenght</li>
-        <li>Pockets with zippers</li>
-        <li>Recycled material</li>
-      </ul>
+      <!-- <div class="productinfolineseperator">_____________________________</div> -->
+      <p>_____________________________</p>
+      <div class="bulletpointsproducttext">
+        <div class="bulletpoints1">
+          <ul>
+            <li>YKK®-zipper</li>
+            <li>Windproof and breathebale</li>
+            <li>2-layer construction</li>
+            <li>100 % sealed seam</li>
+          </ul>
+          
+        </div>
+        <div class="bulletpoints2">
+          <ul>
+            <li>Comfortable interior</li>
+            <li>Thigh-length</li>
+            <li>Pockets with zippers</li>
+            <li>Recycled material</li>
+          </ul>
+
+        </div>
+      </div>
       <div class="sizebuttonscontainer">
         <button>S</button>
         <button>M</button>
